# psplash

./: .gitignore  Makefile.am  calib-img.h  common.c  common.h  configos-img.h  configure.ac  customizations.c  customizations.h  psplash-colors.h  psplash-console.c  psplash-console.h  psplash-fb.c  psplash-fb.h  psplash-poky-img.h  psplash-write.c  psplash.c  psplash.h  settings-img.h
